fix overflow issues at project todos

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -95,7 +95,12 @@ section{
 }
 
 .task > p{
-    margin-left: -50%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 85%;
+    margin-left: 12px;
+    font-size: 14px;
 }
 
 .task > img{
